Update to Error Prone 2.11.0
* Switch to the -Xplugin: maven integration
  (http://errorprone.info/docs/installation)
* Remove uses of deprecated `ProvidesFix` constants in `@BugPattern`
  annotations
* Fix a http://errorprone.info/bugpattern/TreeToString warning